--- a/app/src/main/res/layout/activity_astra_info.xml
+++ b/app/src/main/res/layout/activity_astra_info.xml
@@ -26,6 +26,8 @@
                 android:orientation="vertical"
                 style="@style/card_background">
 
+
+
                 <androidx.cardview.widget.CardView
                     android:layout_width="250dp"
                     android:layout_height="250dp"
@@ -53,34 +55,89 @@
                     style="@style/text_color"
                     android:layout_marginTop="8dp"/>
 
-                <TextView
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/astra_usedfor"
-                    android:text="Used For: "
-                    android:textSize="15sp"
-                    style="@style/text_color"
-                    android:layout_margin="30dp"/>
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Used For: "
+                        android:textSize="15sp"
+                        style="@style/text_color"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginBottom="30dp"
+                        android:layout_marginLeft="30dp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/astra_usedfor"
+                        android:text=""
+                        android:textSize="15sp"
+                        style="@style/text_color"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginLeft="3dp"/>
+
+                </LinearLayout>
 
 
-                <TextView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/astra_counteredby"
-                    android:text="Counterd By: "
-                    android:textSize="15sp"
-                    style="@style/text_color"
-                    android:layout_margin="30dp"/>
+                    android:orientation="horizontal">
 
-                <TextView
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Counterd By: "
+                        android:textSize="15sp"
+                        style="@style/text_color"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginBottom="30dp"
+                        android:layout_marginLeft="30dp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/astra_counteredby"
+                        android:text=""
+                        android:textSize="15sp"
+                        style="@style/text_color"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginLeft="3dp"/>
+
+                </LinearLayout>
+
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/astra_deity"
-                    android:text="Deity: "
-                    android:textSize="15sp"
-                    style="@style/text_color"
-                    android:layout_margin="30dp"/>
+                    android:orientation="horizontal">
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Deity: "
+                        android:textSize="15sp"
+                        style="@style/text_color"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginBottom="30dp"
+                        android:layout_marginLeft="30dp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/astra_deity"
+                        android:text=""
+                        android:textSize="15sp"
+                        style="@style/text_color"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginLeft="3dp"/>
+
+                </LinearLayout>
 
             </LinearLayout>
         </ScrollView>
