--- a/app/src/main/res/layout/activity_astra_info.xml
+++ b/app/src/main/res/layout/activity_astra_info.xml
@@ -12,21 +12,16 @@
         android:layout_height="match_parent"
         android:layout_margin="20dp"
         app:cardCornerRadius="30dp"
-
         android:outlineSpotShadowColor="@color/black">
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                style="@style/card_background">
-
-
+                android:orientation="vertical">
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="250dp"
@@ -39,22 +34,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         app:srcCompat="@drawable/ic_launcher_background"
-                        tools:srcCompat="@tools:sample/avatars" />
+                        tools:srcCompat="@tools:sample/avatars"
+                        android:id="@+id/astra_image"/>
 
                 </androidx.cardview.widget.CardView>
-
-
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/astra_name"
-                    android:text="Name"
-                    android:textSize="20sp"
-                    android:layout_gravity="center"
-                    style="@style/text_color"
-                    android:layout_marginTop="8dp"/>
-
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -82,7 +65,6 @@
                         android:layout_marginLeft="3dp"/>
 
                 </LinearLayout>
-
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -138,7 +120,6 @@
                         android:layout_marginLeft="3dp"/>
 
                 </LinearLayout>
-
             </LinearLayout>
         </ScrollView>
 
