--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -7,7 +7,11 @@
     android:padding="16dp"
     android:gravity="center">
 
-
+    <androidx.cardview.widget.CardView
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:cardElevation="10dp"
+        app:cardCornerRadius="20dp">
 
         <ImageView
             android:layout_width="150dp"
@@ -15,7 +19,7 @@
             android:id="@+id/gridImage"
             android:scaleType="centerCrop"/>
 
-
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:layout_width="wrap_content"
