--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -22,14 +22,18 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/gridCaption"
-        android:text="Caption"
-        android:textSize="20sp"
-        android:gravity="center"
-        android:textColor="@color/black"
-        android:layout_marginTop="8dp"/>
+        android:layout_width="150dp"
+        android:layout_height="45dp"
+        android:textAlignment="center"
+        android:textSize="25dp"
+        android:padding="5dp"
+        android:id="@+id/textname"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        />
+
+
+
 
 
 
