--- a/app/src/main/res/layout/activity_arrow_head_info.xml
+++ b/app/src/main/res/layout/activity_arrow_head_info.xml
@@ -56,6 +56,7 @@
 
                     <TextView
                         android:id="@+id/txtname"
+                        android:fontFamily="@font/belgrano"
                         style="@style/text_color"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -93,7 +94,7 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="horizontal">
 
                     <TextView
                         style="@style/text_color"
@@ -101,9 +102,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="30dp"
                         android:layout_marginTop="30dp"
-                        android:layout_marginBottom="30dp"
+                        android:layout_marginBottom="15dp"
                         android:fontFamily="@font/belgrano"
-                        android:text="Sanskrit Name : "
+                        android:text="Sanskrit Name: "
                         android:textSize="15sp" />
 
                     <TextView
@@ -113,10 +114,11 @@
                         android:text=""
                         android:textStyle="normal"
                         android:textSize="15sp"
+                        android:layout_marginTop="30dp"
                         style="@style/text_color"
                         android:justificationMode="inter_word"
                         android:fontFamily="@font/belgrano"
-                        android:layout_marginLeft="30dp"
+                        android:layout_marginLeft="3dp"
                         android:layout_marginRight="30dp"/>
 
                 </LinearLayout>
@@ -125,7 +127,7 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
                     <TextView
                         style="@style/text_color"
@@ -133,7 +135,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="30dp"
                         android:layout_marginTop="30dp"
-                        android:layout_marginBottom="30dp"
+                        android:layout_marginBottom="15dp"
                         android:fontFamily="@font/belgrano"
                         android:text="Shape : "
                         android:textSize="15sp" />
@@ -147,8 +149,7 @@
                         android:textSize="15sp"
                         style="@style/text_color"
                         android:fontFamily="@font/belgrano"
-                        android:layout_marginTop="30dp"
-                        android:layout_marginLeft="3dp"/>
+                        android:layout_marginLeft="30dp"/>
 
                 </LinearLayout>
             </LinearLayout>
