--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -22,15 +22,14 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
+        android:id="@+id/textname"
         android:layout_width="150dp"
         android:layout_height="45dp"
-        android:textAlignment="center"
-        android:textSize="25dp"
         android:padding="5dp"
-        android:id="@+id/textname"
+        android:textAlignment="center"
         android:textColor="@color/white"
-        android:textStyle="bold"
-        />
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
 
 
