--- a/app/src/main/res/layout/activity_astra_info.xml
+++ b/app/src/main/res/layout/activity_astra_info.xml
@@ -139,7 +139,45 @@
                         android:layout_marginLeft="3dp"/>
 
                 </LinearLayout>
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:cardCornerRadius="20dp"
+                    android:layout_margin="20dp">
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal"
+                        android:background="@color/white">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/baseline_warning_24"
+                            android:layout_marginStart="10dp"
+                            android:layout_gravity="center">
+
+                        </ImageView>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/black"
+                            android:layout_margin="10dp"
+                            android:justificationMode="inter_word"
+                            android:layout_gravity="center"
+                            android:text="Astras don't have specific physical form.The images are our best efforts to show their possible appearances."/>
+
+                    </LinearLayout>
+
+
+                </androidx.cardview.widget.CardView>
+
             </LinearLayout>
+
         </ScrollView>
 
 
