--- a/app/src/main/res/layout/activity_astra_info.xml
+++ b/app/src/main/res/layout/activity_astra_info.xml
@@ -30,6 +30,15 @@
                 android:layout_marginBottom="10dp"
                 >
 
+                <ImageButton
+                    android:id="@+id/infoButton"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_gravity="end"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:contentDescription="Info button"
+                    android:src="@drawable/ic_info"/>
+
                 <androidx.cardview.widget.CardView
                     android:layout_width="250dp"
                     android:layout_height="250dp"
