--- a/app/src/main/res/layout/activity_mission_and_vision.xml
+++ b/app/src/main/res/layout/activity_mission_and_vision.xml
@@ -1,9 +1,156 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    style="@style/background_layout"
+    android:background="@drawable/om5"
     tools:context=".MissionAndVision">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="20dp"
+        app:cardCornerRadius="30dp"
+        android:background="@drawable/backcard"
+        android:outlineSpotShadowColor="@color/black">
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingBottom="20dp"
+            android:background="@drawable/backcard2"
+            style="@style/card_background">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_marginBottom="10dp"
+                >
+
+                <ImageButton
+                    android:id="@+id/infoButton"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_gravity="end"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:contentDescription="Info button"
+                    android:visibility="invisible"
+                    android:src="@drawable/ic_info"/>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        style="@style/text_color"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginBottom="15dp"
+                        android:fontFamily="@font/belgrano"
+                        android:layout_gravity="center_horizontal"
+                        android:text="About Us"
+                        android:id="@+id/first"
+                        android:textStyle="bold"
+                        android:textSize="25sp"/>
+
+                    <TextView
+                        android:id="@+id/display_first"
+                        style="@style/text_color"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginRight="30dp"
+                        android:fontFamily="@font/belgrano"
+                        android:text="@string/about_us"
+                        android:layout_gravity="center_horizontal"
+                        android:justificationMode="inter_word"
+                        android:textAlignment="gravity"
+                        android:textSize="15sp"
+                        android:textStyle="normal" />
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/second"
+                        android:layout_gravity="center_horizontal"
+                        style="@style/text_color"
+                        android:textStyle="bold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginBottom="30dp"
+                        android:fontFamily="@font/belgrano"
+                        android:text="Mission"
+                        android:textSize="25sp" />
+
+                    <TextView
+                        android:id="@+id/display_second"
+                        style="@style/text_color"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginRight="30dp"
+                        android:fontFamily="@font/belgrano"
+                        android:text="@string/mission"
+                        android:justificationMode="inter_word"
+                        android:textSize="15sp"
+                        android:textStyle="normal" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        style="@style/text_color"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginBottom="30dp"
+                        android:fontFamily="@font/belgrano"
+                        android:text="Vision"
+                        android:textStyle="bold"
+                        android:id="@+id/third"
+                        android:textSize="25sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/display_third"
+                        android:layout_gravity="center_horizontal"
+                        android:text="@string/vision"
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginRight="30dp"
+                        android:justificationMode="inter_word"
+                        android:textStyle="normal"
+                        android:textSize="15sp"
+                        style="@style/text_color"
+                        android:fontFamily="@font/belgrano"
+                         />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </ScrollView>
+
+    </androidx.cardview.widget.CardView>
+
+
+</LinearLayout>
