--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -16,21 +16,47 @@
         <Toolbar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#BCBCBC" >
+            android:background="@drawable/backcard4">
 
             <ImageButton
                 android:id="@+id/buttondrawertoggle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_baseline_menu_24"
                 android:background="@android:color/transparent"
-                android:padding="5dp" />
+                android:padding="5dp"
+                android:src="@drawable/ic_baseline_menu_24" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textAlignment="center"
-                android:text="Saastra Samvad"/>
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:paddingLeft="150px"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="150px"
+                    android:layout_height="150px"
+                    android:layout_weight="1"
+                    android:src="@drawable/logo" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingRight="50px"
+                    android:text="Shaastra Samvad"
+                    android:textAlignment="center"
+                    android:gravity="center_vertical"
+                    android:textColor="@color/primary_darker"
+                    android:textSize="50px"
+                    android:textStyle="bold" />
+
+
+            </LinearLayout>
+
+
         </Toolbar>
 
         <GridView
@@ -46,6 +72,12 @@
             android:layout_centerInParent="true"
             android:indeterminate="true" />
 
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:srcCompat="@tools:sample/avatars" />
+
     </LinearLayout>
 
     <com.google.android.material.navigation.NavigationView
@@ -55,6 +87,8 @@
         app:dividerInsetStart="60dp"
         app:itemIconPadding="30dp"
         app:menu="@menu/drawer_items"
+        android:background="@color/primary"
+        android:backgroundTint="@color/primary"
         app:headerLayout="@layout/drawer_header"
         android:layout_gravity="start"/>
 
