--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -24,7 +24,7 @@
     <TextView
         android:id="@+id/textname"
         android:layout_width="150dp"
-        android:layout_height="45dp"
+        android:layout_height="wrap_content"
         android:padding="5dp"
         android:textAlignment="center"
         android:textColor="@color/white"
