--- a/app/src/main/res/menu/drawer_items.xml
+++ b/app/src/main/res/menu/drawer_items.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+
     <item
         android:id="@+id/navMenu"
         android:title="Menu"/>
 
     <item
-        android:id="@+id/navDonate"
-        android:title="Donate"/>
+        android:id="@+id/navMission"
+        android:title="About Us"/>
 
     <item
-        android:id="@+id/navMission"
-        android:title="Mission"/>
+        android:id="@+id/navDonate"
+        android:title="Donate"/>
 
     <item
         android:id="@+id/navContact"
@@ -20,7 +21,4 @@
     <item
         android:id="@+id/navFeedback"
         android:title="Feedback"/>
-
-
-
 </menu>
