--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,7 @@
     tools:context=".activities.MainActivity"
     android:background="@drawable/om5">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
 
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,14 +15,16 @@
         android:orientation="vertical"
         >
 
+        <include
+            layout="@layout/custom_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
         <LinearLayout
             android:id="@+id/info_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
-
 
             <androidx.cardview.widget.CardView
                 android:onClick="expand"
