--- a/app/src/main/res/layout/activity_mission_and_vision.xml
+++ b/app/src/main/res/layout/activity_mission_and_vision.xml
@@ -6,7 +6,12 @@
     android:layout_height="match_parent"
     style="@style/background_layout"
     android:background="@drawable/om5"
-    tools:context=".MissionAndVision">
+    tools:context=".activities.MissionAndVision">
+
+    <include
+        layout="@layout/custom_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
