Updated Drawer Header

--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="250dp"
-
     android:background="@color/black"
     android:gravity="bottom"
     android:backgroundTint="@color/primary_dark"
@@ -35,6 +34,37 @@
             android:textColor="@color/primary_darker"
             android:textSize="25sp"
             android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginLeft="10px"
+            android:layout_marginBottom="20px"
+            android:layout_gravity="center">
+
+            <ImageView
+                android:id="@+id/insta_img"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/icons8_instagram_48"
+                />
+
+            <ImageView
+                android:id="@+id/facebook_img"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/icons8_facebook_48"
+                />
+
+            <ImageView
+                android:id="@+id/x_img"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/icons8_x_48"
+                />
+
+        </LinearLayout>
 
     </LinearLayout>
 
