--- a/app/src/main/res/layout/activity_main_start.xml
+++ b/app/src/main/res/layout/activity_main_start.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:openDrawer="start"
-    android:id="@+id/drawerLayout"
-    tools:context=".MainStart">
+    android:id="@+id/drawerLayout">
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigationView"
