--- a/app/src/main/res/menu/drawer_items.xml
+++ b/app/src/main/res/menu/drawer_items.xml
@@ -26,17 +26,17 @@
         android:icon="@drawable/ic_money"/>
 
     <item
-        android:id="@+id/facebookSymbol"
+        android:id="@+id/navfacebookSymbol"
         android:title="Follow us on facebook"
         android:icon="@drawable/icons8_facebook"/>
 
     <item
-        android:id="@+id/instagramSymbol"
+        android:id="@+id/navinstagramSymbol"
         android:title="Follow us on Instagram"
         android:icon="@drawable/icons8_instagram"/>
 
     <item
-        android:id="@+id/xSymbol"
+        android:id="@+id/navxSymbol"
         android:title="Follow us on X"
         android:icon="@drawable/icons8_twitterx"/>
 
