--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
+    android:layout_height="300dp"
     android:background="@color/black"
     android:gravity="bottom"
     android:backgroundTint="@color/primary_dark"
@@ -34,6 +34,16 @@
             android:textColor="@color/primary_darker"
             android:textSize="25sp"
             android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/navTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="15dp"
+            android:padding="16dp"
+            android:textAlignment="center"
+            android:text="Copyright © 2024 Shaastra Samvad. All rights reserved"
+            android:textColor="@color/primary_darker" />
 
     </LinearLayout>
 
